<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/teal_200"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_nav_head"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_thoitiet150"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtUsernameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_nav_head"
        android:layout_margin="8dp"
        android:text="@string/guest"
        android:textColor="#040404"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsernameHeader"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/no_email"
        android:textColor="#F44336" />

</RelativeLayout>