<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:padding="10dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtCityName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/city_name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="1"
                android:id="@+id/txtCityLat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/city_lat" />

            <TextView
                android:layout_weight="1"
                android:id="@+id/txtCityLon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/city_lon" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>