<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:minHeight="200dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/do_you_want_to_delete_this_place"
        android:textColor="#3F51B5"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnYes_DeletePlace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnNo_DeletePlace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>